plugins {
    java
    jacoco
    id("org.springframework.boot") version "3.3.4"
    id("io.spring.dependency-management") version "1.1.6"
}

group = "mx.ferreteria"
version = "0.0.1-SNAPSHOT"

java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }

repositories { mavenCentral() }

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    // Métricas Prometheus nativas vía Spring Boot Actuator + Micrometer.
    // Complementa al OTel agent (que se enfoca en trazas/logs) — el /actuator/prometheus
    // expone métricas JVM/HTTP/HikariCP sin pasar por el collector.
    implementation("io.micrometer:micrometer-registry-prometheus")
    // OpenTelemetry: API + SDK + exporters OTLP para que el backend pueda emitir
    // trazas/métricas/logs programáticamente (sin javaagent). El javaagent en Docker
    // ya hace auto-instrumentación, pero tener el SDK disponible permite agregar
    // trazas manuales en puntos críticos (login, checkout, etc.).
    implementation("io.opentelemetry:opentelemetry-api:1.43.0")
    implementation("io.opentelemetry:opentelemetry-sdk:1.43.0")
    implementation("io.opentelemetry:opentelemetry-exporter-otlp:1.43.0")
    implementation("io.opentelemetry:opentelemetry-exporter-logging:1.43.0")
    implementation("org.flywaydb:flyway-database-postgresql")
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
    // M7 endurecimiento: rate limiting por controller (bucket4j) con buckets en memoria (Caffeine)
    implementation("com.bucket4j:bucket4j-core:8.10.1")
    implementation("com.github.ben-manes.caffeine:caffeine")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
    runtimeOnly("org.postgresql:postgresql")

    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")
    testImplementation("com.tngtech.archunit:archunit-junit5:1.3.0")
    testImplementation("org.testcontainers:postgresql")
    testImplementation("org.testcontainers:junit-jupiter")
}

// ---------------------------------------------------------------------------
// generateMigrations: genera las migraciones Flyway desde los scripts canónicos
// de ../ferreteriaDB (única fuente de verdad del esquema).
//  - Resuelve meta-comandos psql (\connect se elimina, \ir se empata en línea).
//  - V1__base.sql  = 01_base_esquemas + 02_tablas(+vistas_core empalado) 
//  - V2__parametria.sql = 03_parametria + refresh_tokens (backend)
//  - Copia 05_dummy.sql a db/demo (SOLO perfil demo, nunca en migración).
// Los archivos generados se versionan para que la imagen Docker construya sola.
// ---------------------------------------------------------------------------
val dbScriptsDir = rootProject.projectDir.resolve("../ferreteriaDB/scripts")
val migrationSrc = "src/main/resources/db/migration"
val demoSrc = "src/main/resources/db/demo"

tasks.register("generateMigrations") {
    group = "build"
    description = "Genera migraciones Flyway desde ferreteriaDB/scripts (fuente canónica)"
    onlyIf { dbScriptsDir.resolve("01_base_esquemas.sql").exists() }
    doLast {
        fun read(name: String) = dbScriptsDir.resolve(name).readText()
        val header = """
            -- GENERATED by :generateMigrations — NO EDITAR A MANO.
            -- Fuente: ../ferreteriaDB/scripts (canonico). Regenerar con ./gradlew generateMigrations
        """.trimIndent() + "\n"

        // V1: base + tablas (empalando vistas en lugar de \ir) — sin \connect
        // sqlPuro: neutraliza meta-comandos psql EN LINEA (\gexec al final de SELECT)
        fun sqlPuro(texto: String) = texto.lineSequence()
            .map { l ->
                if (Regex("\\\\g(exec|set)?\\s*$").containsMatchIn(l))
                    "-- [generateMigrations] meta-comando psql omitido"
                else l
            }
            .joinToString("\n")
        val base = sqlPuro(read("01_base_esquemas.sql")).lineSequence()
            .filterNot { it.trimStart().startsWith("\\connect") }.joinToString("\n")
        // El bloque condicional de CREATE DATABASE usa \gexec como terminador:
        // bajo Flyway no aplica (ya estamos DENTRO de la BD objetivo) -> se elimina.
        val baseLimpio = base.replace(
            Regex("(?s)SELECT format\\(\\s*'CREATE DATABASE.*?meta-comando psql omitido"),
            "-- [generateMigrations] CREATE DATABASE condicional omitido (Flyway corre dentro de la BD)"
        )
        val tablasLines = read("02_tablas.sql").lines()
        val irIdx = tablasLines.indexOfFirst { it.trimStart().startsWith("\\ir") }
        require(irIdx >= 0) { "02_tablas.sql sin \\ir vistas_core.sql" }
        val v1 = baseLimpio + "\n\n" +
            tablasLines.take(irIdx).joinToString("\n") + "\n" +
            read("vistas_core.sql") + "\n" +
            tablasLines.drop(irIdx + 1).joinToString("\n")
        val migDir = projectDir.resolve(migrationSrc)
        val demoDir = projectDir.resolve(demoSrc)
        migDir.mkdirs()
        demoDir.mkdirs()
        File(migDir, "V1__base.sql").writeText(header + v1)

        // V2: parametría + tabla de refresh tokens propia del backend
        val refreshTokens = """

            -- ------------------------------------------------------------------
            -- Backend: tokens de refresco JWT (rotacion en logout)
            -- ------------------------------------------------------------------
            CREATE TABLE IF NOT EXISTS seg.refresh_tokens (
                refresh_token_id BIGINT GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
                usuario_id       INTEGER NOT NULL REFERENCES seg.usuarios(usuario_id) ON DELETE CASCADE,
                token_hash       VARCHAR(100) NOT NULL UNIQUE,
                expires_at       TIMESTAMPTZ NOT NULL,
                revoked_at       TIMESTAMPTZ,
                creado_en        TIMESTAMPTZ NOT NULL DEFAULT now()
            );
            CREATE INDEX IF NOT EXISTS idx_refresh_usuario ON seg.refresh_tokens(usuario_id);
        """.trimIndent()
        File(migDir, "V2__parametria.sql").writeText(header + read("03_parametria.sql") + "\n" + refreshTokens)

        // Demo data SOLO como recurso del perfil demo
        File(demoDir, "05_dummy.sql").writeText(read("05_dummy.sql"))
        println("generateMigrations: V1/V2 + demo generados desde $dbScriptsDir")
    }
}

tasks.processResources { dependsOn("generateMigrations") }

jacoco { toolVersion = "0.8.12" }

// DTOs/config/bootstrap quedan fuera del cálculo de cobertura
val coverageExclusions = listOf(
    "mx/ferreteria/api/common/config/**",
    "mx/ferreteria/api/**/dto/**",
    "**/*Application*",
    "mx/ferreteria/api/common/demo/**",
    "mx/ferreteria/api/**/repo/**"
)

tasks.test {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    classDirectories.setFrom(
        fileTree("build/classes/java/main") { exclude(coverageExclusions) }
    )
    reports {
        xml.required = true
        html.required = true
    }
}

tasks.jacocoTestCoverageVerification {
    classDirectories.setFrom(
        fileTree("build/classes/java/main") { exclude(coverageExclusions) }
    )
    violationRules {
        rule {   // gate global: >= 80% instrucciones
            element = "BUNDLE"
            limit { counter = "INSTRUCTION"; value = "COVEREDRATIO"; minimum = "0.80".toBigDecimal() }
        }
        rule {   // gate estricto donde vive la lógica: >= 85%
            element = "PACKAGE"
            includes = listOf(
                "mx.ferreteria.api.common.i18n",
                "mx.ferreteria.api.common.error",
                "mx.ferreteria.api.common.web"
            )
            limit { counter = "INSTRUCTION"; value = "COVEREDRATIO"; minimum = "0.85".toBigDecimal() }
        }
    }
}

tasks.check { dependsOn(tasks.jacocoTestCoverageVerification) }
